--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
     publish = "."
 
 [[redirects]]
-    from = "/*"
-    to = "/build/index.html"
+    from = /*
+    to = /build/index.html
     status = 200
