--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #local environemnt
-# REACT_APP_PROTOCOL='http'
-# REACT_APP_BACKEND_URL='localhost:4000'
+REACT_APP_PROTOCOL='http'
+REACT_APP_BACKEND_URL='localhost:4000'
 
 #production environemnt
-REACT_APP_PROTOCOL='https'
-REACT_APP_BACKEND_URL='back-auth-y5l8.onrender.com'
+# REACT_APP_PROTOCOL='https'
+# REACT_APP_BACKEND_URL='back-auth-y5l8.onrender.com'
